feat: Implemented realistic calculation of time saved analytics statistic. (#14)
