# apps/api/interfaces/guide_views_repository.go
@@ -12,4 +12,5 @@ import (
 type GuideViewsRepository interface {
 	Create(ctx context.Context, dto *types.CreateGuideViewDTO) error
 	GetCountByTeam(ctx context.Context, teamID uuid.UUID, since *time.Time) (int, error)
+	GetTimeSavedByTeam(ctx context.Context, teamID uuid.UUID, since *time.Time) ([]*types.GuideViewStats, error)
 }
